Rename from co.cask to io.cdap
Also cleanup pom.xml